# SD-Threads

./: .gitignore  README.md  comandos.txt  docker-compose.yml
client/: CMakeLists.txt  entrada.txt  main  main.cpp
master/: CMakeLists.txt  dockerfile  main.cpp
slave1/: dockerfile  main.cpp
slave2/: dockerfile  main.cpp
